# hilbert

./: .env.template  .gitignore  CONTEXT.md  README.md  all.txt  main.md  pyproject.toml
data/: responsibilities_final_clusters.json  responsibility_cluster_definitions.json  responsibility_cluster_frequencies.json  responsibility_cluster_mapping.json  soft_skills_llm_clusters.json  soft_skills_names.json  soft_skills_profiles.json
data/clustering/: clusters_final_model.json  skill_names.json  skill_to_cluster_final_model.json
data/salary_model/: bootstrap_ci.json  grade_model_b_results.json  salary_model_coefficients_k15.json  salary_model_k15_full.json  salary_model_predictions_k15.json  salary_model_v3_results.json
scripts/: assign_clusters.py  bootstrap_grade_model.py  check_currency.py  debug_tg.py  deduplicate.py  export_datasets.py  export_db.sh  extract_skills_llm.py  filter.sql  generate_salary_figures.py  grade_model.py  import_db.sh  normalize_currency.py  pipeline.py  populate_title_parser.py  prepare_hard_skills.py  salary_model.py  salary_model_v3.py
scripts/setup/: cluster_hard_skills_bertopic.py  describe_hard_skills_for_clustering.py  finalize_clusters.py  generate_responsibility_clusters.py  llm_cluster_soft_skills.py  normalize_hard_skills.py  normalize_soft_skills.py
src/: base_crawler.py  base_parser.py  config.py  db.py  session.py
src/cleaners/: description.py
src/cli/: main.py  review.py
src/crawlers/: habr.py  hh.py  telegram.py
src/features/: currency.py  deepseek_client.py  llm_parser.py  prompts.py  section_parser.py  (+1 more)
(+2 files in other folders)
