[project]
name = "hilbert"
version = "0.1.0"
description = "Vacancy crawler & salary model for DevOps/SRE specialists"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "beautifulsoup4",
    "lxml",
    "psycopg2-binary",
    "telethon",
    "browser-cookie3",
    "python-dotenv",
    "openai",
    "pandas",
    "sqlalchemy",
    "openpyxl",
    "numpy",
    "scipy",
    "scikit-learn",
    "statsmodels",
    "matplotlib",
    "seaborn",
    "sentence-transformers",
    "umap-learn",
    "hdbscan",
    "bertopic",
    "pymorphy3",
]

[project.scripts]
hilbert-crawl = "src.cli.main:main"
hilbert-clean = "src.cleaners.description:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"
